# pixel-poll

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  go.mod  pyproject.toml  pyrightconfig.esp32.json  pyrightconfig.json  pyrightconfig.rp2.json  ruff.toml
.github/workflows/: pre-commit.yml
firmware/: RPI_PICO2_W-20250415-v1.25.0.uf2  RPI_PICO2_W-20250616-v1.26.0-preview.uf2
src/central/: ble_vote_manager.py  ble_vote_mgr.py  consts.py  hardware.py  main.py  old_main.py  vote.py  vote_session.py
src/central/encoder/: rotary.py  rotary_irq_rp2.py
src/central/lcd/: Robotron13x21.c  ili9341.py  xglcd_font.py
src/central/ui/: core.py  pages.py  widgets.py
src/common/: consts.py  utils.py
src/controller/: ble_vote_controller.py  ble_vote_ctrlr.py  main.py  threadsafe_queue.py  vote.py
tests/esp32/hil/: blink.py
tests/esp32/hil/ble_advertise/: main.py
tests/esp32/hil/blink/: blink.py
tests/esp32/hil/io_smoke_test/: main.py
tests/esp32/hil/periodic_vote/: ble_vote_controller.py  main.py  vote.py
tests/esp32/hil/state_machine/: main.py  threadsafe_queue.py
tests/hil/esp32/: blink.py
tests/hil/pico/: blink.py
tests/hil/pico/blinky/: go.mod  go.sum
tests/rp2/hil/blink/: main.py
tests/rp2/hil/bouncing_boxes/: demo_bouncing_boxes.py  ili9341.py  main.py
tests/rp2/hil/display_cards/: main.py
tests/rp2/hil/display_text/: lcd  main.py
tests/rp2/hil/display_ui/: lcd  lib  main.py
tests/rp2/hil/print_encoder/: encoder  main.py
tests/rp2/hil/receive_votes/: ble_vote_manager.py  (+2 more)
tools/: clean_flash_esp32.sh  migrate_stubs_fmt.py
(+2 files in other folders)
